All working , just need to test with ZAP and publish

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,60 +4,51 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
+
+
+
+
     <p>
-        An aside lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque habitant
-        morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at feugiat
-        mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum. Fusce
-        euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec purus
-        purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat. Quisque
-        at dolor in quam sagittis dapibus et in mi.
+        This is a fake page for a fake organization dedicated to promote the hiking and exploring on the Lane county, like if that was
+        something needed, Right? We all love hiking and exploring in oregon, and sharing our pictures, adventures and tips when we are
+        havingf a good time enjoying the outdoors. Here are some of my pictures that I have accumulated through the years, I like the sunny ones
+        mostly, they feel a little warmer maybe.
     </p>
-    <p>
-        A paragraph lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque
-        habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at
-        feugiat mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum.
-        Fusce euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec
-        purus purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat.
-        Quisque at dolor in quam sagittis dapibus et in mi.
-    </p>
-    <p>
-        Another paragraph vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-        Aenean dignissim viverra ligula, sit amet tempus ligula placerat id. Duis ut elit blandit velit molestie
-        vehicula. Vestibulum volutpat neque at nisi pharetra ut lacinia orci tristique. Cras leo purus, mollis feugiat
-        sagittis sit amet, adipiscing eget ipsum. Suspendisse enim ligula, pharetra quis auctor non, aliquet vel elit.
-        Nullam at imperdiet leo.
-    </p>
-    <p>
-        An aside lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque habitant
-        morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at feugiat
-        mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum. Fusce
-        euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec purus
-        purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat. Quisque
-        at dolor in quam sagittis dapibus et in mi.
-    </p>
-    <p>
-        A paragraph lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque
-        habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at
-        feugiat mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum.
-        Fusce euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec
-        purus purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat.
-        Quisque at dolor in quam sagittis dapibus et in mi.
-    </p>
-    <p>
-        Another paragraph vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae;
-        Aenean dignissim viverra ligula, sit amet tempus ligula placerat id. Duis ut elit blandit velit molestie
-        vehicula. Vestibulum volutpat neque at nisi pharetra ut lacinia orci tristique. Cras leo purus, mollis feugiat
-        sagittis sit amet, adipiscing eget ipsum. Suspendisse enim ligula, pharetra quis auctor non, aliquet vel elit.
-        Nullam at imperdiet leo.
-    </p>
-    <p>
-        An aside lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque habitant
-        morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at feugiat
-        mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum. Fusce
-        euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec purus
-        purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat. Quisque
-        at dolor in quam sagittis dapibus et in mi.
-    </p>
+    <section>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="thumbnail">
+                    <img src="~/images/IMG_20190829_160203.jpg" style="width:100%" />
+
+                    <div class="caption">
+                        <p>A well known place</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+
+                    <img src="~/images/IMG_20191029_162358.jpg" style="width:100%" />
+
+                    <div class="caption">
+                        <p>Sure you have seen this</p>
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="thumbnail">
+
+
+                    <img src="~/images/IMG_20191219_134057.jpg" style="width:100%" />
+                    <div class="caption">
+                        <p>Darlingtonia Garden.</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
     <p>
         A paragraph lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque
         habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at
@@ -73,4 +64,14 @@
         sagittis sit amet, adipiscing eget ipsum. Suspendisse enim ligula, pharetra quis auctor non, aliquet vel elit.
         Nullam at imperdiet leo.
     </p>
+    <p>
+        An aside lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris in mi mauris. Pellentesque habitant
+        morbi tristique senectus et netus et malesuada fames ac turpis egestas. Aenean adipiscing, odio at feugiat
+        mattis, mi quam rhoncus enim, a tincidunt orci erat et felis. In vel erat ac lorem faucibus interdum. Fusce
+        euismod ultrices velit et condimentum. In nec quam sed felis pharetra pulvinar vel et sapien. Sed nec purus
+        purus. Suspendisse hendrerit sapien nec est egestas ut blandit neque molestie. Aliquam erat volutpat. Quisque
+        at dolor in quam sagittis dapibus et in mi.
+    </p>
+
+
 </div>
