--- a/Views/Info/CovidInfo.cshtml
+++ b/Views/Info/CovidInfo.cshtml
@@ -8,12 +8,27 @@
 <h1>News Related to Covid </h1>
 <div>
     <section>
-
+        <h3 float="center">Check the lastest news:</h3>
+        <br />
+        <div class="row">
+            <div class="col-sm-6">
+                <a href="https://www.oregonlive.com/coronavirus/2021/03/coronavirus-in-oregon-402-new-cases-and-3-deaths-as-risk-of-increased-spread-looms.html">News In Oregon </a>
+            </div>
+            <br />
+            <div class="col-sm-6">
+                <a href="https://www.dailyemerald.com/news/lane-county-drops-to-moderate-risk-category-for-covid-19/article_bfc1dd62-82ec-11eb-b7cd-d7622cb30b22.html">News In Lane</a>
+            </div>
+        </div>
         <aside>
             <h3>Be cautious!</h3>
 
             <div class="row">
-                <div class="col-md-6"><img src="~/images/PANO_20190817_134858.jpg" width="200" /></div>
+                <div class="col-md-3">
+                    <img src="~/images/PANO_20190817_134858.jpg" style="width:100%" />
+                </div>
+                <div class="col-md-3">
+                    <img src="~/images/PANO_20190918_155907.jpg" style="width:100%" />
+                </div>
                 <div class="col-md-6">
                     <p>
 
@@ -43,17 +58,7 @@
 
 
         </aside>
-        <h3 float="center">Check the lastest news:</h3>
-        <br />
-        <div class="row">
-            <div class="col-sm-6">
-                <a href="https://www.oregonlive.com/coronavirus/2021/03/coronavirus-in-oregon-402-new-cases-and-3-deaths-as-risk-of-increased-spread-looms.html">News In Oregon </a>
-            </div>
-                <br />
-                <div class="col-sm-6">
-                    <a href="https://www.dailyemerald.com/news/lane-county-drops-to-moderate-risk-category-for-covid-19/article_bfc1dd62-82ec-11eb-b7cd-d7622cb30b22.html">News In Lane</a>
-                </div>
-                </div>
-        
+
+
     </section>
 </div>
