--- a/Views/Info/Weather.cshtml
+++ b/Views/Info/Weather.cshtml
@@ -4,3 +4,85 @@
 @{
 }
 <h1>Weathering around</h1>
+<div class="row">
+    <div class="col-md-3">
+        <a href="https://www.kptv.com/weather/">KPTV Weather</a>
+    </div>
+    <div class="col-md-3">
+        <a href="https://www.accuweather.com/en/us/or/oregon-weather">Accu Weather</a>
+    </div>
+    <div class="col-md-3">
+        <a href="https://forecast.weather.gov/MapClick.php?zoneid=ORZ002"> Government Site </a>
+    </div>
+    <div class="col-md-3">
+        <a href="https://www.oregonlive.com/weather/"> Oregon Live Weather </a>
+    </div>
+</div>
+<br/>
+<br/>
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <div class="numbertext">1 / 3</div>
+            <img src="~/images/IMG_20190430_193625.jpg" style="width:100%" />
+            <div class="text">Fern Ridge</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2 / 3</div>
+            <img src="~/images/IMG_20190829_135843.jpg" style="width:100%" />
+
+            <div class="text">Blue Pool</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3 / 3</div>
+            <img src="~/images/IMG_20190919_170635.jpg" style="width:100%" />
+            <div class="text">McKenzie River</div>
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+    <script>
+
+        var slideIndex = 1;
+        showSlides(slideIndex);
+
+        // Next/previous controls
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        // Thumbnail image controls
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("dot");
+            if (n > slides.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+        }
+    </script>
