--- a/Views/Post/AddComment.cshtml
+++ b/Views/Post/AddComment.cshtml
@@ -24,9 +24,9 @@
 
 
 
-    <button type="submit" class="btn btn-primary">@ViewBag.Title</button>
+    <button type="submit" class="btn btn-success">@ViewBag.Title</button>
     <a asp-controller="Post" asp-action="Index"
-       class="btn btn-primary">Cancel</a>
+       class="btn btn-warning">Cancel</a>
     <input type="hidden" asp-for="PostID" />
 </form>
 @*  <input type="hidden" asp-for="Name" value=@User.Identity.Name />  removed from the story model
