--- a/Views/Shared/Register.cshtml
+++ b/Views/Shared/Register.cshtml
@@ -63,8 +63,11 @@
     </div>
     <div class="row">
         <div class="offset-2 col-sm-4">
-            <button type="submit" class="btn btn-primary">Register</button>
+            <button type="submit" class="btn btn-success">Register</button>
+            <a asp-controller="Home" asp-action="Index"
+               class="btn btn-warning">Cancel</a>
         </div>
+
     </div>
 
     <div class="row">
@@ -74,3 +77,31 @@
     </div>
 
 </form>
+<div class="row">
+    <div class="col-md-4">
+        <div class="thumbnail">
+            <img src="~/images/IMG_20190430_193625.jpg"style="width:100%"  />  
+            <div class="caption">
+                <p>Some artificial lake</p>
+            </div>
+
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="thumbnail">
+            <img src="~/images/IMG_20190829_135843.jpg" style="width:100%" />            
+            <div class="caption">
+                <p>This is a pool  :)</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="thumbnail">
+            <img src="~/images/IMG_20190919_170635.jpg"style="width:100%" />
+            <div class="caption">
+                <p>Guess the river.</p>
+            </div>
+
+        </div>
+    </div>
+</div>
