--- a/Views/Home/Admin.cshtml
+++ b/Views/Home/Admin.cshtml
@@ -7,47 +7,47 @@
 
 <h5 class="mt-2"><a asp-controller="Account" asp-action="Register">Add a Member</a></h5>
 
-<table class="table table-bordered table-striped table-sm">
+<table class="table table-bordered table-striped table-sm" background-color="teal">
 <thead>
     <tr><th>Member Name</th><th>Roles</th><th></th><th></th><th></th></tr>
 </thead>
 <tbody>
-    @if (Model.Members == null)
+    @if (Model.Members.Count() == 0)
     {
         <tr><td colspan="5">There are no user accounts.</td></tr>
     }
     else
     {
-        @foreach (MemberModel user in Model.Members)
+        @foreach (MemberModel member in Model.Members)
         {
             <tr>
-                <td>@user.UserName</td>
+                <td>@member.UserName</td>
                 <td>
-                    @foreach (string roleName in user.RoleNames)
+                    @foreach (string roleName in member.RoleNames)
                     {
                         <div>@roleName</div>
                     }
                 </td>
                 <td>
-                    <form method="post" asp-action="Delete"
-                          asp-route-id="@user.Id">
-                        <button type="submit" class="btn btn-primary">
+                    <form background-color="light-green" asp-controller="User" method="post" asp-action="Delete"
+                          asp-route-id="@member.Id">
+                        <button type="submit" class="btn btn-danger">
                             Delete User
                         </button>
                     </form>
                 </td>
                 <td>
-                    <form method="post" asp-action="AddToAdmin"
-                          asp-route-id="@user.Id">
-                        <button type="submit" class="btn btn-primary">
+                    <form method="post"asp-controller="User" asp-action="AddToAdmin"
+                          asp-route-id="@member.Id">
+                        <button type="submit" class="btn btn-success">
                             Add To Admin
                         </button>
                     </form>
                 </td>
                 <td>
-                    <form method="post" asp-action="RemoveFromAdmin"
-                          asp-route-id="@user.Id">
-                        <button type="submit" class="btn btn-primary">
+                    <form method="post" asp-controller="User" asp-action="RemoveFromAdmin"
+                          asp-route-id="@member.Id">
+                        <button type="submit" class="btn btn-warning">
                             Remove From Admin
                         </button>
                     </form>
@@ -62,8 +62,8 @@
 
 @if (Model.Roles.Count() == 0)
 {
-    <form method="post" asp-action="CreateAdminRole">
-        <button type="submit" class="btn btn-primary">
+    <form method="post"asp-controller="User" asp-action="CreateAdminRole">
+        <button type="submit" class="btn btn-success">
             Create Admin Role
         </button>
     </form>
@@ -81,9 +81,9 @@ else
                 <tr>
                     <td>@role.Name</td>
                     <td>
-                        <form method="post" asp-action="DeleteRole"
+                        <form method="post"asp-controller="User" asp-action="DeleteRole"
                               asp-route-id="@role.Id">
-                            <button type="submit" class="btn btn-primary">
+                            <button type="submit" class="btn btn-danger">
                                 Delete Role
                             </button>
                         </form>
