--- a/Views/Post/EditPost.cshtml
+++ b/Views/Post/EditPost.cshtml
@@ -11,47 +11,72 @@
 }
 
 <h2>@ViewBag.Title</h2>
+<div class="col-md-10 mx-auto py-4">
+    <div class="card">
+        <div class="card-header bg-success text-uppercase text-white">
+            <h4>Add New </h4>
+        </div>
+        <div class="card-body">
+            <form enctype="multipart/form-data" method="post" asp-action="EditPost">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label asp-for="PostTitle">Title</label>
+                            <input asp-for="PostTitle" class="form-control">
+                            <span asp-validation-for="PostTitle" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label asp-for="PostTopic">Topic</label>
+                            <input asp-for="PostTopic" class="form-control">
+                            <span asp-validation-for="PostTopic" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="form-group">
+                            <label asp-for="PostText">Text</label>
+                            <input asp-for="PostText" class="form-control">
+                            <span asp-validation-for="PostText" class="text-danger"></span>
+                        </div>
+                    </div>
+                </div>
+        <div class="row">
 
-<form asp-action="Edit" method="post">
-    <div asp-validation-summary="All" class="text-danger"></div>
-
-    <div class="form-group">
-        <label asp-for="PostTitle">Title</label>
-        <input asp-for="PostTitle" class="form-control">
-        <span asp-validation-for="PostTitle" class="text-danger"></span>
-    </div>
-
-    <div class="form-group">
-        <label asp-for="PostTopic">Topic</label>
-        <input asp-for="PostTopic" class="form-control">
-        <span asp-validation-for="PostTopic" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="PostText">Text</label>
-        <input asp-for="PostText" class="form-control">
-        <span asp-validation-for="PostText" class="text-danger"></span>
-    </div>
-
-    @*
-          <div class="form-group">
-              <label asp-for="Poster.Id">Poster</label>
-              <select asp-for="Poster.Id" class="form-control">
-                  <option value="">select a User</option>
-                  @foreach (AppUser g in ViewBag.Users)
-                  {
-                      <option value="@g.Id">@g.UserName</option>
-
-                  }
-              </select>
-          </div>  Removed due to identity, grabbing user from the User.identity
-        ++++  That was to select the user from a drop down box , now is not in use.  ++++++
-    *@
+            <div  class="col-md-12">
+                <div class="form-group">
+                   
+                    <div class="custom-file">
+                        <input type="hidden" asp-for="ProfilePicture" class="custom-file-input" id="customFile">
+                        
+                    </div>
+                    <span asp-validation-for="ProfilePicture" class="text-danger"></span>
+                </div>
+            </div>
+        </div>
 
 
-    <input type="hidden" asp-for="PostID" value=@Model.PostID />
 
-    <button type="submit" class="btn btn-primary">@ViewBag.Action</button>
-    <a asp-controller="Home" asp-action="Stories"
-       class="btn btn-primary">Cancel</a>
+        <input type="hidden" asp-for="PostID" value=@Model.PostID />
+
+        <button type="submit" class="btn btn-success">@ViewBag.Action</button>
+        <a asp-controller="Post" asp-action="Index"
+            class="btn btn-warning">Cancel</a>
 </form>
-@*  <input type="hidden" asp-for="Name" value=@User.Identity.Name />  removed from the story model*@
+            </div >
+            </div >
+            </div >
+            @section scripts{
+                <script type="text/javascript">
+
+                    // Add the following code if you want the name of the file appear on select
+                    $(".custom-file-input").on("change", function () {
+                        var fileName = $(this).val().split("\\").pop();
+                        $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+                    });
+                </script>
+            }
