--- a/Views/Post/Index.cshtml
+++ b/Views/Post/Index.cshtml
@@ -49,9 +49,10 @@
                         <td>Story without user</td>
                     }
                     <td>@post.PostTime</td>
-                    <td>
-                        @if (User.IsInRole("Admin"))
-                        {
+                    <td>@if (post.Member.Name == User.Identity.Name || User.IsInRole("Admin"))
+                    {
+
+                   
                             <a asp-controller="Post" asp-action="EditPost"
                                asp-route-id="@post.PostID"
                                asp-route-slug="@post.Slug">Edit</a>
@@ -77,24 +78,24 @@
     <tr>
         <td></td>
         <td>
-            <strong>-</strong>
+            <strong>-</strong><br />
             @comment.CommentText
         </td>
         <td>
-            <strong>Posted By:</strong>
+            <strong>Posted By:</strong><br />
             @comment.Member.Name
         </td>
         <td>
-            <strong>When:</strong>
+            <strong>When:</strong><br />
             @comment.CommentDate
         </td>
         <td></td>
         <td>
-            @if (User.Identity.IsAuthenticated)
+            @if (comment.Member.Name == User.Identity.Name || User.IsInRole("Admin"))
             {
                 <a color="red" asp-controller="Post" asp-action="DeleteComment"
                    asp-route-id="@comment.CommentId"
-                    asp-route-slug="@post.Slug">Delete Comment</a>
+                    asp-route-slug="@post.Slug"> &lt;= Delete this Comment</a>
             }
             </td>
 </tr>
