--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,9 +10,7 @@
 <body>
     <div class="sticky">
         <header>
-            @using Microsoft.AspNetCore.Identity
-            @* @using Microsoft.AspNetCore.Mvc.Razor *@
-            @inject SignInManager<MemberModel> sigInManager
+            
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3">
                 <div class="container">
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">OnTheLaneOfHike</a>
@@ -22,7 +20,7 @@
                     </button>
                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                         <ul class="navbar-nav flex-grow-1">
-                                            
+
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Info" asp-action="Index">General Info</a>
                             </li>
@@ -35,11 +33,15 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                             </li>
+                            @using Microsoft.AspNetCore.Identity
+                            @using Microsoft.AspNetCore.Mvc.Razor
+                            @inject SignInManager<MemberModel> sigInManager
                             @if (sigInManager.IsSignedIn(User))
                             {
                                 <li class="nav-item">
-
                                     <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="LogOut">LogOut</a>
+                                </li>
+                                <li class="nav-item">
                                     <span class="text-danger"> @User.Identity.Name</span>
                                 </li>
 
@@ -56,7 +58,7 @@
                             @if (User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark"  asp-controller="Home" asp-action="Admin">Admin</a>
+                                    <a class="nav-link text-dark" asp-controller="User" asp-action="Admin">Admin</a>
                                 </li>
                             }
                         </ul>
